# acuity

./: AI开发执行步骤与提示词.md  运营模拟功能详细设计文档.md
backend/apps/api/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/apps/api/alembic/: env.py
backend/apps/api/alembic/versions/: 001_add_template_parse_progress.py  002_add_template_field_status.py  003_add_extraction_task.py  004_add_document_page.py  005_add_ocr_result.py  006_add_document_classification.py  007_add_extraction_visit.py  008_add_extraction_prompt_and_result.py  009_add_extraction_mapped_result.py  010_add_extraction_review_output.py  021_form_tags.py  (+25 more)
backend/apps/api/scripts/: benchmark_step3_ocr.py  migrate_standard_field_codes.py  test_confirm_mapping.py  test_gemini_connectivity.py  test_upload_demo.py  verify_pdf_generation.py
backend/apps/api/src/: config.py  deps.py  main.py  seed.py
backend/apps/api/tests/: __init__.py  conftest.py  test_ai_usage_interceptor.py  test_analytics.py  test_artifact_gates.py  test_auth_profile.py  test_claim_fields_contract.py  test_claims_oversight.py  test_confirm_flatten.py  test_doctor_settings.py  test_engine_pool.py  test_fill_engine.py  test_finalize_extraction.py  test_gemini_client_locations.py  test_gemini_fallback.py  test_i18n.py  test_impersonation_access.py  test_impersonation_expiry.py  test_impersonation_notify.py  test_impersonation_request_audit.py  test_mfa_totp.py  test_mineru_markdown_adapter.py  test_onboarding_steps.py  test_step10_insurance_mapper.py  test_step11_review_output.py  test_step1_upload.py  test_step2_preprocess.py  test_step3_ocr.py  test_step4_classify.py  test_step5_detect_visits.py  test_step6_prompt_builder.py  test_step7_extract_fields.py  test_step8_validate.py  test_step9_detect_missing.py  test_tickets.py
(+518 files in other folders)
