[project]
name = "insurance-api"
version = "0.1.0"
description = "香港诊所保险保单智能填报 SaaS —— FastAPI 后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "redis>=5.1",
    "arq>=0.26",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24",
    "pypdf>=5.0",
    "pillow>=10.4",
    "boto3>=1.35",
    "httpx>=0.27",
    "structlog>=24.4",
    "cryptography>=43.0",
    "pyotp>=2.9",
    "qrcode>=8.0",
    "google-genai>=1.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "debugpy>=1.8",
]
ocr = [
    "paddleocr>=3.0",
    "paddlepaddle>=3.3.0",
]
# MinerU 需单独安装（体积大、Python 版本限制见官方文档）：
# pip install mineru  或 pip install -e ".[mineru]"
mineru = [
    "mineru>=3.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
